# concordium-mysomeid

./: .dockerignore  .gitignore  .gitmodules  README.md  docker-compose.yml  package.json
.github/workflows/: backend.yaml  chrome-ext.yaml  smart-contract.yaml
QRScanTests/: README.md  tests.py
backend/: CHANGELOG.md  Cargo.toml  README.md
backend/resources/: create-db.sql  schema.sql
backend/scripts/: build.Dockerfile  pg.Dockerfile
backend/src/: db.rs  lib.rs  main.rs
contract/src/: lib.rs
scripts/: api.Jenkinsfile  backend.Jenkinsfile  chrome-ext.Dockerfile  chrome-ext.Jenkinsfile  scraper.Jenkinsfile  web-app.Dockerfile  web-app.Jenkinsfile
