[package]
name = "backend"
version = "1.0.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.21"
chrono = "0.4"
futures = "0.3"
hex = "0.4"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1.0"
url = {version = "2.2", features = ["serde"]}
http = "0.2"
clap = {version = "4", features = ["derive", "env"]}
tokio = {version = "1.20", features = ["rt-multi-thread", "macros", "sync", "signal"]}
tokio-postgres = { version = "^0.7.7", features = ["with-chrono-0_4"] }
rustls = "0.21"
rustls-native-certs = "0.6"
postgres-types = { version = "0.2", features = ["derive"]}
tonic = {version = "0.8", features = ["tls", "tls-roots"]} # Use system trust roots.
reqwest = { version = "0.11", features = ["json"] } # JSON is for the test client
axum = {version = "0.6", features = ["headers"]}
axum-prometheus = { version = "0.3" }
tracing-subscriber = { version = "0.3" }
tracing = { version = "0.1" }
deadpool-postgres = { version = "0.10" }
tower-http = {version = "0.4", features = ["trace", "timeout", "limit", "cors", "fs"]}

zbar-rust = "0.0.21"
image = "0.24.6"
aes-gcm = "0.10"
rand = "0.8.5"
percent-encoding = "2.2.0"
regex = "1"
unicode-segmentation = "1.9.0"

concordium-rust-sdk = {version = "3", path = "../deps/concordium-rust-sdk"}
key_derivation = { path = "../deps/concordium-rust-sdk/concordium-base/rust-src/key_derivation"}
emojis = "0.6.0"
